wrap shared preferences, add countdown if password incorrect

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:layout_width="242dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Show" />
+            android:text="@string/show" />
 
 
     </LinearLayout>
