--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,8 @@
             android:layout_width="242dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/show" />
+            android:text="@string/show"
+            android:layout_marginTop="50dp"/>
 
 
     </LinearLayout>
