--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -58,7 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Reset"
-            android:layout_marginHorizontal="30dp"/>
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="50dp"/>
 
     </LinearLayout>
 
