optimize import, add empty button for testing

--- a/app/src/main/res/layout/fragment_initial_password.xml
+++ b/app/src/main/res/layout/fragment_initial_password.xml
@@ -17,20 +17,19 @@
             android:layout_height="wrap_content"
             android:text="@string/set_up_your_password"
             android:textSize="18sp"
-            android:textAlignment="center"
-        />
+            android:textAlignment="center" />
+
         <EditText
             android:id="@+id/initialPasswordField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
+
         <Button
             android:id="@+id/initialPasswordBtn"
             android:layout_width="242dp"
             android:layout_height="wrap_content"
-            android:text="Done"
-            />
+            android:text="Done" />
 
     </LinearLayout>
 </LinearLayout>
