--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center">
-
 
         <TextView
             android:layout_width="match_parent"
@@ -33,8 +31,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            />
+            android:layout_marginRight="50dp" />
 
 
         <Button
@@ -43,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/show"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="50dp" />
 
 
     </LinearLayout>
