--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,8 +18,8 @@
             android:layout_height="wrap_content"
             android:text="@string/your_message"
             android:textAlignment="center"
-            android:textSize="30sp"
-            />
+            android:textSize="30sp" />
+
         <EditText
             android:id="@+id/messageBody"
             android:layout_width="match_parent"
@@ -29,18 +28,20 @@
             android:layout_marginHorizontal="30dp"
 
             />
+
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/save"
-            android:layout_marginHorizontal="30dp"/>
+            android:layout_marginHorizontal="30dp" />
+
         <Button
             android:id="@+id/resetBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/reset_password"
-            android:layout_marginHorizontal="30dp"/>
+            android:layout_marginHorizontal="30dp" />
 
 
     </LinearLayout>
