--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,34 +17,34 @@
             android:layout_height="wrap_content"
             android:text="Old password:"
             android:textAlignment="textStart"
-            android:textSize="15sp"
-            />
+            android:textSize="15sp" />
+
         <EditText
             android:id="@+id/oldpass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="New password:"
             android:textAlignment="textStart"
-            android:textSize="15sp"
-            />
+            android:textSize="15sp" />
+
         <EditText
             android:id="@+id/newpass1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Confirm password:"
             android:textAlignment="textStart"
-            android:textSize="15sp"
-            />
+            android:textSize="15sp" />
+
         <EditText
             android:id="@+id/newpass2"
             android:layout_width="match_parent"
@@ -59,7 +58,7 @@
             android:layout_height="wrap_content"
             android:text="Reset"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="50dp" />
 
     </LinearLayout>
 
