change context in shared preferences get instance function

--- a/app/src/main/res/layout/fragment_initial_password.xml
+++ b/app/src/main/res/layout/fragment_initial_password.xml
@@ -8,8 +8,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_margin="50dp"
         android:gravity="center">
 
         <TextView
