--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,36 +15,28 @@
         android:orientation="vertical"
         android:layout_gravity="center">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_gravity="center"
+            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginBottom="20sp"
+
+            app:srcCompat="@drawable/finger" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:text="@string/enter_password_to_see_protected_content"
+            android:text="Touch and verify your identity."
             android:textAlignment="center"
-            android:textSize="18sp"
 
-            />
-
-
-        <EditText
-            android:id="@+id/passwordField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp" />
-
-
-        <Button
-            android:id="@+id/showMessageBtn"
-            android:layout_width="242dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/show"
-            android:layout_marginTop="50dp" />
+            android:textSize="18sp" />
 
 
     </LinearLayout>
+
+
 
 
 </LinearLayout>
